--- a/app/views/readings/show.html.erb
+++ b/app/views/readings/show.html.erb
@@ -11,11 +11,6 @@
 </p>
 
 <p>
-  <strong>Progress:</strong>
-  <%= @reading.progress %>
-</p>
-
-<p>
   <strong>Start:</strong>
   <%= @reading.start %>
 </p>
@@ -24,6 +19,12 @@
   <strong>Comment:</strong>
   <%= @reading.comment %>
 </p>
+<p>
+  <strong>Progress:</strong>
+    <div class="progress progress-success progress-striped active" style="width:150px">
+    <div class="bar" style="width: <%= @reading.progress %>"></div>
+</p>
+<br>
 
 <%= link_to 'Edit', edit_reading_path(@reading) %> |
 <%= link_to 'Back', readings_path %>
