--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <ul>
+    <% if admin_signed_in? %>
+    <li>
+      <%= link_to 'Log out', destroy_admin_session_path, :method=>'delete' %>
+    </li>
+      <% elsif %>
+    <li>
+      <%= link_to 'Login', new_admin_session_path %>
+    </li>
+      <% end %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
 <%= yield %>
 
