--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,6 @@
-html {
-  font-family: 'Roboto', sans-serif;
+
+.divider {
+  margin: 15px 0px 15px 0px;
+  width : 50 %;
+  border-bottom : 1px solid #777;
 }
