--- a/app/views/readings/show.html.erb
+++ b/app/views/readings/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+  <span> <%= image_tag @reading.picture %></span>
 <p>
   <strong>Title:</strong>
   <%= @reading.title %>
