--- a/app/views/readings/_form.html.erb
+++ b/app/views/readings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@reading) do |f| %>
+<%= form_for @reading, :html => {:multipart => true} do |f| %>
   <% if @reading.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@reading.errors.count, "error") %> prohibited this reading from being saved:</h2>
@@ -10,6 +10,8 @@
       </ul>
     </div>
   <% end %>
+
+  <%= f.file_field :picture %>
 
   <div class="field">
     <%= f.label :title %><br>
