--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,15 @@
-
 .divider {
   margin: 15px 0px 15px 0px;
   border-bottom : 1px solid #777;
   width : 100%;
 }
+
+.footer {
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+.footer-text {
+  margin: 20px 0px;
+}
+
